--- a/image-filtering.ipynb
+++ b/image-filtering.ipynb
@@ -357,7 +357,7 @@
     "compare_images([\n",
     "    [image_averaging, 'Original Image'],\n",
     "    [image_averaging_filtered, 'Averaging Filtered Image'],\n",
-    "])"
+    "], size=(20,20))"
    ],
    "id": "b9cea75d40a89278",
    "outputs": [],
@@ -384,7 +384,7 @@
     "compare_images([\n",
     "    [image_gaussian, 'Original Image'],\n",
     "    [image_gaussian_filtered, 'Gaussian Filtered Image'],\n",
-    "])"
+    "], size=(20,20))"
    ],
    "id": "2c82fd9094a752c5",
    "outputs": [],
@@ -411,7 +411,7 @@
     "compare_images([\n",
     "    [image_median, 'Original Image'],\n",
     "    [image_median_filtered, 'Median Filtered Image'],\n",
-    "])"
+    "], size=(20,20))"
    ],
    "id": "49445f6f5f8a6ed1",
    "outputs": [],
@@ -438,7 +438,7 @@
     "compare_images([\n",
     "    [image_bilateral, 'Original Image'],\n",
     "    [image_bilateral_filtered, 'Median Filtered Image'],\n",
-    "])"
+    "], size=(20,20))"
    ],
    "id": "6698660baed85671",
    "outputs": [],
@@ -462,7 +462,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "image_difference = images[0]\n",
+    "image_difference = images[1]\n",
     "\n",
     "kernel_difference1 = np.array([[-1, 0, 1],\n",
     "                               [-1, 0, 1],\n",
@@ -480,7 +480,7 @@
     "                               [ 0,  0,  0],\n",
     "                               [-1, -1, -1]])\n",
     "\n",
-    "image_difference_filtered = cv2.filter2D(src=image_difference, ddepth=-1, kernel=kernel_difference4)\n",
+    "image_difference_filtered = cv2.filter2D(src=image_difference, ddepth=-1, kernel=kernel_difference3)\n",
     "\n",
     "# image_difference_filtered1 = cv2.filter2D(src=image_difference, ddepth=-1, kernel=kernel_difference1)\n",
     "# image_difference_filtered2 = cv2.filter2D(src=image_difference, ddepth=-1, kernel=kernel_difference4)\n",
@@ -489,7 +489,7 @@
     "compare_images([\n",
     "    [image_difference, 'Original Image'],\n",
     "    [image_difference_filtered, 'Filtered Image'],\n",
-    "])"
+    "], size=(20,20))"
    ],
    "id": "33ffb96c848358b1",
    "outputs": [],
@@ -514,7 +514,7 @@
     "compare_images([\n",
     "    [image_difference, 'Original Image'],\n",
     "    [image_difference_sharpened, 'Sharpened Image'],\n",
-    "])"
+    "], size=(20,20))"
    ],
    "id": "355f18b52fa4f438",
    "outputs": [],
@@ -538,7 +538,7 @@
     "compare_images([\n",
     "    [image_canny, 'Original Image'],\n",
     "    [image_canny_edges, 'Image Edges'],\n",
-    "], grayscale=True)"
+    "], size=(20,20), grayscale=True)"
    ],
    "id": "d56e160ed0c7e6c8",
    "outputs": [],
@@ -556,7 +556,7 @@
     "    compare_images([\n",
     "        [image_canny, 'Original Image'],\n",
     "        [image_canny_edges, 'Image Edges'],\n",
-    "    ], grayscale=True)\n",
+    "    ], size=(20,20), grayscale=True)\n",
     "\n",
     "\n",
     "\n",
@@ -589,7 +589,7 @@
     "compare_images([\n",
     "    [image_contour, 'Original Image'],\n",
     "    [image_contour_thresh, 'Segmented Image'],\n",
-    "], grayscale=True)"
+    "], size=(20,20), grayscale=True)"
    ],
    "id": "59966d063a27106f",
    "outputs": [],
@@ -608,7 +608,7 @@
     "compare_images([\n",
     "    [image_contour, 'Original Image'],\n",
     "    [image_contour_copy, 'Contoured Image'],\n",
-    "], grayscale=True)"
+    "], size=(20,20), grayscale=True)"
    ],
    "id": "d7be7650b7e40ba9",
    "outputs": [],
@@ -788,7 +788,7 @@
     "compare_images([\n",
     "    [cv2.cvtColor(image_lane_detection, cv2.COLOR_BGR2RGB), 'Original Image'],\n",
     "    [cv2.cvtColor(image_lane_detection_lines, cv2.COLOR_BGR2RGB), 'Contoured Image'],\n",
-    "])"
+    "], size=(20,20))"
    ],
    "id": "1ad6d36830c56213",
    "outputs": [],
@@ -811,11 +811,13 @@
     "image_lane_detection_mask, image_lane_detection_region = region_selection(image_lane_detection_edges)\n",
     "\n",
     "compare_images([\n",
-    "    [image_lane_detection_blur, 'Blurred Image'],\n",
+    "    [image_lane_detection_blur, 'Smoothed Image'],\n",
     "    [image_lane_detection_edges, 'Edges'],\n",
+    "], size=(20,20), grayscale=True)\n",
+    "compare_images([\n",
     "    [image_lane_detection_mask, 'Mask'],\n",
     "    [image_lane_detection_region, 'Masked Edges'],\n",
-    "], grayscale=True)"
+    "], size=(20,20), grayscale=True)"
    ],
    "id": "727a22cd9e55ce4",
    "outputs": [],
@@ -836,7 +838,7 @@
     "    # \"processed\" stores the output video\n",
     "    processed = input_video.fl_image(process_frame)\n",
     "\n",
-    "    # save the output video stream to an mp4 file\n",
+    "    # save the output video stream to a mp4 file\n",
     "    processed.write_videofile(output_video, audio=False)"
    ],
    "id": "b1da4dccc069c82e",
